--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,6 @@
----
 applications:
-- name: my-voice-app
+- domain: mybluemix.net
+  host: Voice-Recognition-Server
+  name: my-voice-app
+domain: mybluemix.net
+host: Voice-Recognition-Server
